--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ mixpanel.init("98cd2875919d56c58986d86e3ba1e16e");</script><!-- end Mixpanel -->
 								<div class="card-content">
 									<p class="title is-3">JP Morgan services documentation</p>
 									<p class="subtitle is-6">Documentation Portal for payments gateway, treasury and fraud services</p>
-									<a href="work_endava.html" target="_blank"><p> <br>Read more
+									<a href="work_jpmc.html" target="_blank"><p> <br>Read more
 										<span class="icon">
 											<i class="fa fa-long-arrow-right"></i>
 										</span>
@@ -194,7 +194,7 @@ mixpanel.init("98cd2875919d56c58986d86e3ba1e16e");</script><!-- end Mixpanel -->
 								<div class="card-content">
 									<p class="title is-3">REPAY Config Tool</p>
 									<p class="subtitle is-6">Payments Gateway | If-then statement wizard for lenders Configuring</p>
-									<a href="work_endava.html" target="_blank"><p> <br>Read more
+									<a href="work_repay_1.html" target="_blank"><p> <br>Read more
 										<span class="icon">
 											<i class="fa fa-long-arrow-right"></i>
 										</span>
@@ -218,7 +218,7 @@ mixpanel.init("98cd2875919d56c58986d86e3ba1e16e");</script><!-- end Mixpanel -->
 								<div class="card-content">
 									<p class="title is-3">REPAY Direct Debit</p>
 									<p class="subtitle is-6">Payments Gateway | Scheduled Payments</p>
-									<a href="work_endava.html" target="_blank"><p> <br>Read more
+									<a href="work_repay_2.html" target="_blank"><p> <br>Read more
 										<span class="icon">
 											<i class="fa fa-long-arrow-right"></i>
 										</span>
