--- a/work_jpmc.html
+++ b/work_jpmc.html
@@ -117,19 +117,19 @@
 					<div class="column is-three-quarters is-narrow">
 						<div class="has-text-left">
 							<div class="content">
-								<h2 class="title is-2">Direct Debit</h2>
-								<p class="subtitle is-5">Scheduled Payments for borrowers<br></p>
-								<p class=''><span class='subtitle is-5'>The opportunity -</span>
-									REPAY lenders define multiple installment repayments with their customers. Users can sign in every time they are doing a payment
-									<br/>
-									What if they can set up automatic payments on a schedule?
+								<h2 class="title is-2">Public API Emulation</h2>
+								<p class="subtitle is-5">Try endpoint live modules<br></p>
+								<p class=''><span class='subtitle is-5'>The problem -</span>
+									JP Morgan Chase offers their merchant customers, several digital services for treasury, payment gateway, fraud protection, etc. Each solution had their documentation on .pdf files on different websites requiring authentication.
+									<br/><br/>
+									What if JP Morgan had a single portal for all documentation accessible, searchable in search engines and able to try their technology?
 								</p>
 								<p class=''><span class='subtitle is-5'>The solution -</span>
-									Conversational UX to create payment schedules
+										Public <i>try endpoint</i> and copy code samples feature for developers exploring and maintaining JP Morgan solutions and integrations.
 									<br>
 									Scheduled payments grew from 1% of average monthly income to 4%
 								</p>
-								<p class=''><span class='subtitle is-5'>The UX Approach -</span>
+								<p class=''><span class='subtitle is-5'>The approach -</span>
 									Brining concepts from analog industries to loans and adapting them to the repayments business context.
 									<br>
 								</p>
@@ -183,22 +183,18 @@
 										</table>
 									</div>
 								</div>
-								<p class=''><span class='subtitle is-5'>The Deliverables -</span> Wireframes, UI specs, and User stories were handed to developers
+								<p class=''><span class='subtitle is-5'>The Deliverables -</span> Owned the backlog, prototypes, charts for models.
 									<br>
-								Check the whole flow wireframe in invision
-									<strong><a href="https://endava.invisionapp.com/share/P9QF96XFA72#/411942414_Login-GuestAccount-ScheduledPayments-Select_Amount" target="_blank"> HERE</a></strong>
+								Check the first live launch here
+									<strong><a href="https://developer.merchant.jpmorgan.com/content/jpm-cp/msdeveloperportal/us/en/developers/api-explorer/overview/#/4.0.0/POST/gwapi/v4/gateway/payments/" target="_blank"> HERE</a></strong>
 								</p>
 								<div class="columns is-desktop">
-									<div class="column is-6">
-											<iframe src="https://custom-amount-prototype.now.sh" frameborder="0" width="100%" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-									</div>
-									<div class="column is-6">
-										<figure class="image is-350x150">
-											<img src="assets/img/repayScheduled.png" alt="scheduled">
-										</figure>
+									<div class="column is-12">
+											<figure class="image is-350x150">
+												<img src="assets/img/jpmc_liveVersion.png" alt="apiXplorer">
+											</figure>
 									</div>
 								</div>
-
 							</div>
 						</div>
 					</div>
@@ -208,7 +204,7 @@
 
 		<!-- Footer -->
 		<section class="section-4 has-text-centered container">
-			<small>© Alberto Alonso Portfolio 2020 👨🏻‍💻 </small>
+			<small>© Alberto Alonso Portfolio 2022 👨🏻‍💻 </small>
 		</section>
 
 		<!-- Scripts  -->
