--- a/work_repay_1.html
+++ b/work_repay_1.html
@@ -121,7 +121,7 @@
 								<p class="subtitle is-5">If-Then statement Rules configuration, indexing and tracking <br></p>
 								<p class=''><span class='subtitle is-5'>The problem -</span>
 									REPAY holds over +1K Lenders, works as a collection intercessor.<br/>
-									Binds their CRM with a 100% customizable Gateway, therefore require engineers to configure business requirements.
+									Binds their CRM with a 100% customisable Gateway, therefore require engineers to configure business requirements.
 									<br/>
 									From payment method, to convenience fee and amount settings. Engineers override their own work and prefer to begin from scratch every time
 									they need to adjust a configuration.
@@ -131,9 +131,9 @@
 									<br/>
 									Search feature for engineers to find previous work.
 									<br>
-									Rule duplicates reduced 27% after deploying. Besides, engieers are happy they can do quick fixes from their mobile phones confident at the airport! ✈️
+									Rule duplicates reduced 27% after deploying. Besides, engineers are happy they can do quick fixes from their mobile phones confident at the airport! ✈️
 								</p>
-								<p class=''><span class='subtitle is-5'>The UX Approach -</span>
+								<p class=''><span class='subtitle is-5'>The approach -</span>
 									After elicited requirements from engineers, 15 low-fi iterations were needed to come to a version these users felt confident.
 									<br>
 								</p>
@@ -309,7 +309,7 @@
 
 		<!-- Footer -->
 		<section class="section-4 has-text-centered container">
-			<small>© Alberto Alonso Portfolio 2020 👨🏻‍💻 </small>
+			<small>© Alberto Alonso Portfolio 2022 👨🏻‍💻 </small>
 		</section>
 
 		<!-- Scripts  -->
