--- a/work_repay_2.html
+++ b/work_repay_2.html
@@ -129,7 +129,7 @@
 									<br>
 									Scheduled payments grew from 1% of average monthly income to 4%
 								</p>
-								<p class=''><span class='subtitle is-5'>The UX Approach -</span>
+								<p class=''><span class='subtitle is-5'>The approach -</span>
 									Brining concepts from analog industries to loans and adapting them to the repayments business context.
 									<br>
 								</p>
@@ -208,7 +208,7 @@
 
 		<!-- Footer -->
 		<section class="section-4 has-text-centered container">
-			<small>© Alberto Alonso Portfolio 2020 👨🏻‍💻 </small>
+			<small>© Alberto Alonso Portfolio 2022 👨🏻‍💻 </small>
 		</section>
 
 		<!-- Scripts  -->
