--- a/about.html
+++ b/about.html
@@ -58,6 +58,7 @@
   				<!--a class="nav-item is-tab" href="#body">About</a-->
           <!--a class="nav-item is-tab" href="#projects">Projects</a-->
 		  <a class="nav-item" href=index.html>Home</a>
+		<a class="nav-item" href=projects.html>Projects</a>
           <a class="nav-item" target="_blank" href="https://drive.google.com/file/d/1JJHDWpOd8tZ3bNwMYM2GgnhwirXh-EW7/view?usp=sharing">Resume</a>
   			</div>
 
