--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 			</a>
   			<div class="nav-right nav-menu">
 			<a class="nav-item" href=about.html>About</a>
+			<a class="nav-item" href=projects.html>Projects</a>
           <!--a class="nav-item is-tab" href="#projects">Projects</a-->
           <a class="nav-item" target="_blank" href="https://drive.google.com/file/d/1JJHDWpOd8tZ3bNwMYM2GgnhwirXh-EW7/view?usp=sharing">Resume</a>
   			</div>
