--- a/projects.html
+++ b/projects.html
@@ -58,6 +58,7 @@
   				<!--a class="nav-item is-tab" href="#body">About</a-->
           <!--a class="nav-item is-tab" href="#projects">Projects</a-->
 		  <a class="nav-item" target="_blank" href="index.html">Home</a>
+		<a class="nav-item" href=about.html>About</a>
           <a class="nav-item" target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Resume</a>
   			</div>
 			<!-- This "nav-toggle" hamburger menu is only visible on mobile -->
