--- a/projects.html
+++ b/projects.html
@@ -57,9 +57,9 @@
   			<div class="nav-right nav-menu">
   				<!--a class="nav-item is-tab" href="#body">About</a-->
           <!--a class="nav-item is-tab" href="#projects">Projects</a-->
-		  <a class="nav-item" target="_blank" href="index.html">Home</a>
+		  <a class="nav-item" href=index.html>Home</a>
 		<a class="nav-item" href=about.html>About</a>
-          <a class="nav-item" target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Resume</a>
+          <a class="nav-item" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Resume</a>
   			</div>
 			<!-- This "nav-toggle" hamburger menu is only visible on mobile -->
 			<!-- You need JavaScript to toggle the "is-active" class on "nav-menu" -->
