--- a/index.html
+++ b/index.html
@@ -71,7 +71,15 @@
 		<div class="title">
 			<h1>Jarett Dewbury</h1>
 				<br>
-				<div class="typed-out2">Welcome to my Personal Website!</div>
+				<br>
+				<br>
+					<div id=sections>
+						<div id=flip>
+							<div><div>Researcher</div></div>
+							<div><div>Engineer</div></div>
+							<div><div>Entrepreneur</div></div>
+						</div>
+					</div>
 			</div>
     </section>	
 	</body>	
