--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 				<br>
 					<div id=sections>
 						<div id=flip>
-							<div><div>Entrepreneur</div></div>
+							<div><div>Innovator</div></div>
 							<div><div>Engineer</div></div>
 							<div><div>Researcher</div></div>
 						</div>
