--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   color: #101010;
   background: #8262FF;
 }
-
 </style>
+</style> 
 	<title>Jarett Dewbury</title>
 	<!-- css files -->
 	<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
@@ -50,13 +50,12 @@
   			<!-- Add the modifier "is-active" to display it on mobile -->
 			<!--a class="navbar-brand abs" href="https://jdewbury.github.io/jarettd.github.io/">Jarett Dewbury</a-->
 			<!--<h1><img class="avatar" src="assets/img/favicon.png.png"></h1>-->
-			<a href = index.html>
-				<img src = "assets/img/weblogo.png" />
-			</a>
+				<a href = index.html>
+					<img src = "assets/img/weblogo.png" />
+				</a>
   			<div class="nav-right nav-menu">
 			<a class="nav-item" href=about.html>About</a>
 			<a class="nav-item" href=projects.html>Projects</a>
-          <!--a class="nav-item is-tab" href="#projects">Projects</a-->
   			</div>
 
 			<!-- This "nav-toggle" hamburger menu is only visible on mobile -->
@@ -73,14 +72,28 @@
 				<br>
 				<br>
 				<br>
+				<div class="text">
+					<p>Aspiring</p>
+					<p>
+					  <span class="word white">Researcher</span>
+					  <span class="word white">Engineer</span>
+					  <span class="word white">Innovator</span>
+					  <span class="word white">Entrepreneur</span>
+					  <span class="word white">Dreamer</span>
+					</p>
+				  </div>
+				  <!--
 					<div id=sections>
 						<div id=flip>
-							<div><div>Innovator</div></div>
-							<div><div>Engineer</div></div>
 							<div><div>Researcher</div></div>
+							<div><div>Engineer</div></div>
+							<div><div>Entrepreneur</div></div>
 						</div>
 					</div>
+					-->
 			</div>
     </section>	
+
+	<script src="js/main.js"></script>
 	</body>	
 </html>
