--- a/about.html
+++ b/about.html
@@ -79,20 +79,40 @@
           <div class="column">
             <div class="about-desc">
               <!--p class="has-text-centered"-->
-		Hi, I'm <b>Jarett Dewbury</b>.<br /><br>
+		Hi, I'm <b>Jarett Dewbury</b><br /><br>
                 I'm an aspiring Engineer and researcher looking to share my passions and better the lives of those around me. I am 
 		a current <a href="https://uwaterloo.ca/future-students/programs/biomedical-engineering" target="_blank">Biomedical Engineering</a> undergraduate student at the University of Waterloo.<br /><br />
-              </p>
-              <p id="interests">
                 I am currently looking to explore a variety of topics ranging from brain-machine interfaces, deep learning, 
 		   artificial intelligence, 
 		neurotechnology, software engineering, and research exploring the intersection of these fields! <br /><br />
 		Outside of academia, my passions focus around <a href="https://www.eliteprospects.com/player/582668/jarrett-dewbury" target="_blank">ice hockey</a>, bike rides, and all things food.
-              </p>
             </div>
           </div>
         </div>
       </div>
+	  <br><br><br>
+	  <div class="arrow bounce" >
+		<a href = #About1 >
+		<img src="assets/img/arrow.png">
+		</a>
+	  </div>
     </section>	
+	<br><br><br><br><br><br><br><br>
+	<hr />
+	<section class=""section section-2"" id="About1">
+		<div class="container">
+		  <div class="columns is-centered is-vcentered">
+			<div class="column">
+			  <div class="about-desc">
+		 <b>Here's what I have been up to recently...</b><br /><br>
+		 <img class="aboutimage" src="assets/img/bci.png">
+		 <br><br><br>
+				  As a member and Co-Lead of <a href="https://www.watolink.com/" target="_blank">WATOLINK</a>'s Biosignal Research (BSR) Team, I have been exploring the exciting applications of brain-computer interfaces!
+				  I also have had the opportunity to observe and analyze my own EEG signals using the OpenBCI headset!
+			  </div>
+			</div>
+		  </div>
+		</div>
+	  </section>	
 	</body>	
 </html>
