--- a/projects.html
+++ b/projects.html
@@ -76,7 +76,7 @@
 				<div class="containers">
 					<img src="assets/img/TeslaCAD.png" alt="Avatar" class="image" style="width:100%">
 					<div class="middle">
-					  <a class="text" target="_blank" href="https://cad.onshape.com/documents/1049dabac32c374dafe7177c/w/a21b431392b48645369181de/e/07898b64f88f5a09e4661aef?renderMode=0&uiState=61e3bd6734da6b0884e3d836">View Project</a>
+					  <a class="projecttext" target="_blank" href="https://cad.onshape.com/documents/1049dabac32c374dafe7177c/w/a21b431392b48645369181de/e/07898b64f88f5a09e4661aef?renderMode=0&uiState=61e3bd6734da6b0884e3d836">View Project</a>
 					</div>
 				  </div>
 			</div>
@@ -97,7 +97,7 @@
 				<div class="containers">
 					<img src="assets/img/Othello.png" alt="Avatar" class="image" style="width:100%">
 					<div class="middle">
-						<a class="text" target="_blank" href="https://github.com/Jdewbury/Othello-Game">View Project</a>
+						<a class="projecttext" target="_blank" href="https://github.com/Jdewbury/Othello-Game">View Project</a>
 					</div>
 				  </div>
 			</div>
