--- a/about.html
+++ b/about.html
@@ -93,11 +93,11 @@
 	  <br><br><br>
 	  <div class="arrow bounce" >
 		<a href = #About1 >
-		<img src="assets/img/arrow.png">
+		<img src="assets/img/arrows.png">
 		</a>
 	  </div>
     </section>	
-	<br><br><br><br><br><br><br><br>
+	<br><br><br><br><br><br>
 	<hr />
 	<section class=""section section-2"" id="About1">
 		<div class="container">
@@ -105,10 +105,18 @@
 			<div class="column">
 			  <div class="about-desc">
 		 <b>Here's what I have been up to recently...</b><br /><br>
+		 					<div class = "border">
+					  <div class = "inner-cutout"> 
+						<div class="containers">
 		 <img class="aboutimage" src="assets/img/bci.png">
-		 <br><br><br>
-				  As a member and Co-Lead of <a href="https://www.watolink.com/" target="_blank">WATOLINK</a>'s Biosignal Research (BSR) Team, I have been exploring the exciting applications of brain-computer interfaces!
-				  I also have had the opportunity to observe and analyze my own EEG signals using the OpenBCI headset!
+		 <div class="middle">
+					<a class="projecttext" href="https://www.watolink.com/" target="_blank"> WATOLINK</a><br><br>
+						As a member and Co-Lead of WATOLINK's Biosignal Research (BSR) Team, I have been exploring the exciting applications of brain-computer interfaces.
+						I also have had the opportunity to observe and analyze my own EEG signals using the OpenBCI headset!</a>
+					</div>
+				</div>
+		</div>
+	</div>
 			  </div>
 			</div>
 		  </div>
