--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 			<div class = "abouttext">
 				I'm an aspiring developer and researcher looking to share my passions with those around me. I am 
 				a current <a href="https://uwaterloo.ca/future-students/programs/biomedical-engineering" target="_blank">Biomedical Engineering</a> undergraduate at the University of Waterloo.<br /><br />
-				I am currently looking to explore a variety of topics such as neural interfaces, deep learning, 
+				I am looking to explore a variety of topics such as neural interfaces, deep learning, 
 				artificial intelligence, 
 				neuroengineering, software engineering, and research exploring the intersection of these fields! <br /><br />
 				Outside of academia, my passions focus around <a href="https://www.eliteprospects.com/player/582668/jarrett-dewbury" target="_blank">ice hockey</a>, bike rides, and all things food.<br>
