Updated Navigation Bar

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
+	</head>
 	<body>
 		
 		<!-- Top Navigation Bar -->
@@ -30,11 +31,12 @@
 		<!-- I kid you not, it took me almost a week to get a proper underline animation on these elements-->
 		<!-- It was worth it though :) -->
 		<div id="navbar-right">
-			
-			<ol><a href="#projects" class="effect-underline"><b>Ⅳ. </b> Projects&nbsp;&nbsp;</a></ol>
-			<ol><a href="#experience" class="effect-underline"><b>Ⅲ. </b> Experience&nbsp;&nbsp;</a></ol>
-			<ol><a href="#about" class="effect-underline"><b>Ⅱ. </b> About&nbsp;&nbsp;</a></ol>
-			<ol><a href="#home" class="effect-underline"><b>Ⅰ. </b> Home&nbsp;&nbsp;</a></ol>
+
+			<ol><a href="mailto:jdewbury@uwaterloo.ca" class="effect-underline"><b>Ⅴ. </b>Contact&nbsp;&nbsp;</a></ol>
+			<ol><a href="#projects" class="effect-underline"><b>Ⅳ. </b>Projects&nbsp;&nbsp;</a></ol>
+			<ol><a href="#experience" class="effect-underline"><b>Ⅲ. </b>Experience&nbsp;&nbsp;</a></ol>
+			<ol><a href="#about" class="effect-underline"><b>Ⅱ. </b>About&nbsp;&nbsp;</a></ol>
+			<ol><a href="#home" class="effect-underline"><b>Ⅰ. </b>Home&nbsp;&nbsp;</a></ol>
 		</div>
 			<img class="logo" src="assets/img/weblogo.png" >
 	  </div>
