--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.3.1/css/bulma.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 
-	<link rel="icon" type="image/x-icon" href="assets/img/weblogo.png">
+	<link rel="icon" type="image/x-icon" href="assets/img/Weblogo.png">
 	<meta name="author" content="Jarett Dewbury">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -104,7 +104,7 @@
 				This summer I will be working as a Medical Artificial Intelligence Research Assistant at the University of Waterloo under the supervision of <a href="https://uwaterloo.ca/systems-design-engineering/profile/bptripp" target="_blank">Dr. Bryan Tripp</a>. <br /><br />
 				
 				Outside of academia, my passions focus around <a href="https://www.eliteprospects.com/player/582668/jarrett-dewbury" target="_blank">ice hockey</a>, bike rides, and all things food.<br>
-				<img class="circles" draggable="false" src="assets/img/circle.gif">
+				<img class="circles" draggable="false" src="assets/img/Circle.gif">
 			</div>
 			<div class = "quote">
 				❝We are continually faced by <b>great opportunities</b> brilliantly <b>disguised</b> as <b>insoluble problems</b>.❞<br>
@@ -138,7 +138,7 @@
 				</div>
 		</div><br><br><br><br>
 		<div class="w3-container">
-			<img class="jobimage3 purple" draggable="false" src="assets/img/M22E.png">
+			<img class="jobimage3 purple" draggable="false" src="assets/img/m22e.png">
 			<a class="jobtitle" href="https://math22everyone.github.io/" target="_blank">Math2²Everyone</a>
 				<div class="jobrole">Founder<br>
 					<div class="jobinfo">SEPTEMBER 2018 - PRESENT<br>WATERLOO, ON<br><br>
