--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<link rel="icon" type="image/x-icon" href="assets/img/Weblogo.png">
 	<meta name="author" content="Jarett Dewbury">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta property="og:image" content="assets/img/preview.png" />
 
 </head>
 	<body>
