--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
 				<img class="circles" draggable="false" src="assets/img/Circle.gif">
 			</div>
 			<div class = "quote">
-				❝We are continually faced by <b>great opportunities</b> brilliantly <b>disguised</b> as <b>insoluble problems</b>.❞<br>
-				<c>— Lee Iacocca</c>
+				❝The best way to<b> predict </b>the future is to <b> invent </b>it.❞<br>
+				<c>— Alan Kay</c>
 			</div>
 		</section>	
 
