--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.3.1/css/bulma.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 
-	<link rel="icon" type="image/x-icon" href="assets/img/favicon.png">
-	<meta name="author" content="Hassan Ali">
+	<link rel="icon" type="image/x-icon" href="https://i.ibb.co/0nHTTFb/image103.png">
+	<meta name="author" content="ALejandro Pinto">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 	<body>
@@ -17,12 +17,12 @@
 			<!-- This "nav-menu" is hidden on mobile -->
 			<!-- Add the modifier "is-active" to display it on mobile -->
 			<div class="nav-left">
-				<a href="http://medium.com/@hassanhelfi/" class="nav-item">
+				<a href="https://www.linkedin.com/in/alejandro-pinto-07a90417a/	" class="nav-item">
 					<span class="icon">
 						<i class="fa fa-medium"></i>
 					</span>
 				</a>
-				<a href="http://github.com/helfi92" class="nav-item">
+				<a href="https://github.com/AlejandroPinto5" class="nav-item">
 					<span class="icon">
 						<i class="fa fa-github"></i>
 					</span>
@@ -31,13 +31,13 @@
 					<span class="icon">
 						<i class="fa fa-twitter"></i>
 					</span>
-				</a>				
+				</a>
 			</div>
 
 			<div class="nav-right nav-menu">
 				<a class="nav-item" href="#about">About</a>
 				<a class="nav-item" href="#projects">Projects</a>
-				<a class="nav-item" href="#social">Social</a>
+				<!-- <a class="nav-item" href="#social">Social</a> -->
 			</div>
 
 			<!-- This "nav-toggle" hamburger menu is only visible on mobile -->
@@ -48,27 +48,27 @@
 				<span></span>
 			</span>
 		</nav>
-				
+
 		<!-- About Me -->
 		<section id="about" class="section section-1">
 			<div class="container has-text-centered">
 				<!-- Source: https://flic.kr/p/pAZBNK -->
-				<img class="avatar" src="assets/img/profile.png">
+				<img class="avatar" src="https://i.ibb.co/8DFGHZY/loading.gif">
 			</div>
 			<div class="container"></br>
 				<p class="intro">
-					Lorem Khaled Ipsum is a major key to success. To succeed you must believe. When you believe, you will succeed. Mogul talk. Find peace, life is like a water fall, you’ve gotta flow. Lion! Fan luv. Eliptical talk.
+					I'm Alejandro, Data scientist
 				</p>
 			</div>
 		</section>
-		
+
 		<!-- Projects -->
 		<section  id="projects" class="section section-2">
 			<div class="container">
 				<div class="has-text-centered">
 					<h3 class="title is-3">Projects</h3>
 				</div>
-				
+
 				<div class="columns is-multiline is-desktop">
 					<!-- Project 1 -->
 					<div class="column">
@@ -76,12 +76,12 @@
 							<article>
 								<div>
 									<figure class="image project-figure">
-										<img src="assets/img/project-1.jpg" alt="Image">
+										<img src="https://i.ibb.co/rvhtK0T/gifNb.gif" alt="Image">
 									</figure>
 								</div>
-								<div>			
+								<div>
 									<p>
-										They don’t want us to eat. I told you all this before, when you have a swimming pool, do not use chlorine, use salt water, the healing, salt water is the healing.
+										DFT calculations of like-perovskite Ruddelsen-Popper material Sr2(Ta, Nb)O3N, implemented in VASP. Research group (FICOMACO)
 									</p>
 								</div>
 							</article>
@@ -93,12 +93,12 @@
 							<article>
 								<div>
 									<figure class="image project-figure">
-										<img src="assets/img/project-2.jpg" alt="Image">
+										<img src="https://i.ibb.co/ZT7ttQV/download.png" alt="Image">
 									</figure>
 								</div>
-								<div>			
+								<div>
 									<p>
-										Bless up. Another one. How’s business? Boomin. Don’t ever play yourself. Life is what you make it, so let’s make it.
+										Analysis of physics test students for tenth and eleventh grade.
 									</p>
 								</div>
 							</article>
@@ -109,9 +109,9 @@
 		</section>
 
 		<!-- Social -->
-		<section id="social" class="section section-3">
+		<!-- <section id="social" class="section section-3">
 			<div class="container">
-				<div class="has-text-centered">					
+				<div class="has-text-centered">
 					<h3 class="title is-3">Let's Socialize</h3>
 				</div>
 				<div class="social-container columns">
@@ -123,14 +123,14 @@
 					</div>
 				</div>
 			</div>
-		</section>	
-		
+		</section> -->
+
 		<!-- Footer -->
 		<section class="section-4 has-text-centered container">
-			<a href="http://www.hassanali.me/about">Hassan Ali</a>
+			<a href="">Alejandro Pinto</a>
 		</section>
-		
+
 		<!-- Scripts  -->
-		<script src="controller.js"></script>		
-	</body>	
+		<script src="controller.js"></script>
+	</body>
 </html>
