Add Django function and logo

--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
 
 		<!-- About Me -->
 		<section id="about" class="section section-1">
+			<div class="container"></br>
+				<!-- <p class="intro">
+								Welcome	</p>
+			</div> -->
 			<div class="container has-text-centered">
 				<!-- Source: https://flic.kr/p/pAZBNK -->
-				<img class="avatar" src="https://i.ibb.co/8DFGHZY/loading.gif">
+				<img class="avatar" src="https://i.ibb.co/nwjS0FL/image33.png">
 			</div>
-			<div class="container"></br>
-				<p class="intro">
-					I'm Alejandro, Data scientist
-				</p>
-			</div>
+
 		</section>
 
 		<!-- Projects -->
@@ -81,7 +81,7 @@
 								</div>
 								<div>
 									<p>
-										DFT calculations of like-perovskite Ruddelsen-Popper material Sr2(Ta, Nb)O3N, implemented in VASP. Research group (FICOMACO)
+									<a href="projects/rp.html">	DFT calculations of like-perovskite Ruddelsen-Popper material Sr2(Ta, Nb)O3N, implemented in VASP. Research group (FICOMACO)</a>
 									</p>
 								</div>
 							</article>
@@ -98,7 +98,7 @@
 								</div>
 								<div>
 									<p>
-										Analysis of physics test students for tenth and eleventh grade.
+										Analysis of students physics tests for tenth and eleventh grade.
 									</p>
 								</div>
 							</article>
@@ -126,8 +126,8 @@
 		</section> -->
 
 		<!-- Footer -->
-		<section class="section-4 has-text-centered container">
-			<a href="">Alejandro Pinto</a>
+		<section class="has-text-centered footer">
+			<img src="https://i.ibb.co/jR7YH3p/sign.png" alt="Image">
 		</section>
 
 		<!-- Scripts  -->
