Add RP abstract. Doesn't work navegation index in page rp

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 		<!-- About Me -->
 		<section id="about" class="section section-1">
-			<div class="container"></br>
+			<!-- <div class="container"></br> -->
 				<!-- <p class="intro">
 								Welcome	</p>
 			</div> -->
