Deleted django and add some content to rp page

--- a/projects/rp.html
+++ b/projects/rp.html
@@ -44,8 +44,6 @@
 				<!-- <a class="nav-item" href="#social">Social</a> -->
 			</div>
 
-			<!-- This "nav-toggle" hamburger menu is only visible on mobile -->
-			<!-- You need JavaScript to toggle the "is-active" class on "nav-menu" -->
 			<span class="nav-toggle">
 				<span></span>
 				<span></span>
@@ -53,19 +51,18 @@
 			</span>
 		</nav>
 
-		<!-- About Me -->
 		<main-rp id="rp">
 			<div class="index">
 				<!-- Source: https://flic.kr/p/pAZBNK -->
-				<img class="avatar nav-item" href="../index.html" src="https://i.ibb.co/nwjS0FL/image33.png">
-        <h1 class="nav-item" href="#rp">Ruddlesden-Popper</h1>
+				<img class="avatar-index container nav-item" href="../index.html" src="https://i.ibb.co/nwjS0FL/image33.png">
       </div>
       <div class="rp box">
         <h1>THEORETICAL INVESTIGATION OF THE RUDLESDEN-POPPER OXINITRIDES
           STRUCTURES <span class="math inline"><em>S</em><em>r</em><sub>2</sub>(<em>T</em><em>a</em>,<em>N</em><em>b</em>)<em>O</em><sub>4 − <em>x</em></sub><em>N</em><sub><em>x</em></sub></span>
           VIA DENSITY FUNCTIONAL THEORY
         </h1>
-        <h2>ABATRACT:</h2>
+				<ol>
+        	<li><h2>ABATRACT:</h2></li>
         <p>The Ruddlesden-Popper phase (<span class="smallcaps">rp</span>) phase
           is a perovskite arranged in dislocated layers, with an intergrowth of
           <span class="math inline"><em>A</em><em>B</em><em>X</em><sub>3</sub></span>
@@ -103,14 +100,14 @@
             symmetry, achieving a phase transition to the most favourable chiral
             soft mode with space group <span class="math inline"><em>C</em>222<sub>1</sub></span> (SG. 20).</p>
 
-            <h2>SEARCH FOR THE MOST STABLE RP OXYNITRIDES</h2>
+            	<li><h2>SEARCH FOR THE MOST STABLE RP OXYNITRIDES:</h2></li>
             <p>This chapter presents a structural analysis of the oxynitrides <span class="smallcaps">rp</span> <span
               class="math inline"><em>S</em><em>r</em><sub>2</sub>(<em>T</em><em>a</em>,<em>N</em><em>b</em>)<em>O</em><sub>4 − <em>x</em></sub><em>N</em><sub><em>x</em></sub></span>
               and the search for the most stable anionic orderings. It begins with a
               brief description of perovskite oxides <span class="smallcaps">rp</span>, then describes the partial anionic
               substitution <span class="math inline"><em>x</em> = 0.5</span> of <span class="math inline"><em>O</em><sup>2−</sup></span> by <span class="math inline"><em>N</em><sup>3−</sup></span>, and the partial
               substitution <span class="math inline"><em>x</em> = 1</span> of <span class="math inline"><em>O</em><sup>2−</sup></span> by <span class="math inline"><em>N</em><sup>3−</sup></span>. The anionic
-              substitutions are carried out using the <span class="smallcaps">sod</span> program <span class="citation"
+              substitutions are carried out using the <a href="https://github.com/gcmt-group/sod" target="_blank">sod</a> package of tools <span class="citation"
               data-cites="Grau-Crespo2007"></span>, which is a package of tools for
               computational modeling of periodic systems with site substitutional
               disorder. A disordered system is modeled as a copy of the cell, where
@@ -123,6 +120,69 @@
               configurations with unique symmetry are taken into account. Once the
               unique configurations are identified, the <span class="smallcaps">sod</span> code shows the unique configurations, and
               their degeneracy, that is, the equivalent configurations <span class="citation" data-cites="Grau-Crespo2007"></span>.</p>
+							<figure>
+  							<img src="https://i.ibb.co/HVR5ctw/path537.png" alt="#Fig. config">
+  							<figcaption>Equivalent configurations and inequivalent configurations comparison.</figcaption>
+							</figure>
+							<p>The criterion of equivalence between two configurations is based on the concept of isometric transformations, which are geometric operations such as translations, rotations, and reflections, that maintain all distances and angles within the transformed object constant. In Figure <a href="#Fig. config" data-reference-type="ref" data-reference="Fig. config">configurations</a>, it can be seen that equivalent configurations are the same configuration because a transformation can be used to verify that a configuration is equal to the untransformed configuration. On the other hand, inequivalent configurations do not have a transformation to obtain an equivalent configuration. The fact that two configurations have the same space group does not imply that they will have the same energy <a href="#fn1" class="footnote-ref" id="fnref1" role="doc-noteref"><sup>1</sup></a>, since the elements occupying the crystallographic sites may change, meaning that the energy of the structure depends on the site occupancy and interactions. Concluding the chapter, an analysis of the structural energy of each configuration is presented. Additionally, with the help of the program <a href="https://uspex-team.org/online_utilities/poscar2cif/"><span class="smallcaps">poscar2cif</span></a>, the crystallographic space group of each configuration was obtained.</p>
+							<section id="footnotes" class="footnotes footnotes-end-of-document" role="doc-endnotes">
+								<hr />
+								<ol>
+									<li id="fn1"><p><span class="citation" data-cites="Grau-Crespo2007"></span>.<a href="#fnref1" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
+								</ol>
+							</section>
+							<ul>
+									<li><h3>Anionic sustitution</h3></li>
+							</ul>
+							<p>The focus of this work is the Ruddlesden-Popper (<span
+								class="smallcaps">rp</span>) phase, which has a general formula of <span
+								class="math inline"><em>A</em><sub><em>n</em> + 1</sub><em>B</em><sub><em>n</em></sub><em>X</em><sub>3<em>n</em> + 1</sub>(<em>n</em>=1)</span>,
+								where <span class="math inline"><em>A</em></span> and <span
+								class="math inline"><em>B</em></span> represent the cations, and <span
+								class="math inline"><em>X</em></span> are the anions in the
+								structure&lt;sup&gt;1&lt;/sup&gt;. The cations occupying the
+								crystallographic sites are strontium <span
+								class="math inline">(<em>S</em><em>r</em>)</span> for site <span
+								class="math inline"><em>A</em></span>, niobium or tantalum <span
+								class="math inline">(<em>N</em><em>b</em>,<em>T</em><em>a</em>)</span>
+								for site <span class="math inline"><em>B</em></span>, and oxygen <span
+								class="math inline">(<em>O</em>)</span> for site <span
+								class="math inline"><em>X</em></span>. That is, the two main crystal
+								structures of the <span class="smallcaps">rp</span> phase are <span
+								class="math inline"><em>S</em><em>r</em><sub>2</sub><em>T</em><em>a</em><em>O</em><sub>4</sub></span>
+								and <span
+								class="math inline"><em>S</em><em>r</em><sub>2</sub><em>N</em><em>b</em><em>O</em><sub>4</sub></span>,
+								as shown in Figure &lt;a href="#Fig. rp_nb-ta" data-reference-type="ref"
+								data-reference="Fig. rp_nb-ta"&gt;[Fig. rp_nb-ta]&lt;/a&gt;, obtained
+								with the program <span
+								class="smallcaps">vesta</span>&lt;sup&gt;2&lt;/sup&gt;.&lt;/p&gt;
+								&lt;p&gt;These crystal structures are represented by the
+								crystallographic space group <span
+								class="math inline"><em>I</em>4/<em>m</em><em>m</em><em>m</em></span>
+								(139) and have cell parameters of <span
+								class="math inline"><em>a</em></span> = 4.02994 Å and <span
+								class="math inline"><em>c</em></span> = 12.64448 Å, <span
+								class="math inline"><em>α</em> = <em>β</em> = <em>γ</em> = 90<sup>∘</sup></span>
+								and volume of <span class="math inline">205.35</span> for <span
+								class="math inline"><em>S</em><em>r</em><sub>2</sub><em>T</em><em>a</em><em>O</em><sub>4</sub></span>,
+								and <span class="math inline"><em>a</em></span> = 4.04552 Å and <span
+								class="math inline"><em>c</em></span> =12.74460 Å, <span
+								class="math inline"><em>α</em> = <em>β</em> = <em>γ</em> = 90<sup>∘</sup></span>
+								and volume of <span class="math inline">208.58</span> for <span
+								class="math inline"><em>S</em><em>r</em><sub>2</sub><em>N</em><em>b</em><em>O</em><sub>4</sub></span>,
+								according to experimental data <sup>3,</sup><sup>4,</sup><sup>5</sup>.</p>
+								<section id="footnotes" class="footnotes footnotes-end-of-document" role="doc-endnotes">
+									<hr />
+									<ol>
+										<li id="fn1"><p><span class="citation" data-cites="Beznosikov2000"></span>.<a href="#fnref1" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
+										<li id="fn2"><p><span class="citation" data-cites="Momma2011"></span>.<a href="#fnref2" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
+										<li id="fn3"><p><span class="citation" data-cites="Clarke2002"></span>.<a href="#fnref3" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
+										<li id="fn4"><p><span class="citation" data-cites="Tobias2004"></span>.<a href="#fnref4" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
+										<li id="fn5"><p><span class="citation" data-cites="Diot1999CrystalN"></span>.<a href="#fnref5" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
+									</ol>
+								</section>
+							</p>
+						</ol>
       </div>
 		</main-rp>
 
