Better link projects, left improve figure and figcaption

--- a/index.html
+++ b/index.html
@@ -77,12 +77,8 @@
 								<div>
 									<figure class="image project-figure">
 										<img src="https://i.ibb.co/rvhtK0T/gifNb.gif" alt="Image">
+																			<a href="projects/rp.html"><figcaption>	DFT calculations of like-perovskite Ruddelsen-Popper material Sr2(Ta, Nb)O3N, implemented in VASP. Research group (FICOMACO)</figcaption></a>
 									</figure>
-								</div>
-								<div>
-									<p>
-									<a href="projects/rp.html">	DFT calculations of like-perovskite Ruddelsen-Popper material Sr2(Ta, Nb)O3N, implemented in VASP. Research group (FICOMACO)</a>
-									</p>
 								</div>
 							</article>
 						</div>
@@ -94,12 +90,8 @@
 								<div>
 									<figure class="image project-figure">
 										<img src="https://i.ibb.co/ZT7ttQV/download.png" alt="Image">
+									<a href="https://github.com/AlejandroPinto5/JesusEucaristiaSchool"><figcaption >	Analysis of students physics tests for tenth and eleventh grade.</figcaption></a>
 									</figure>
-								</div>
-								<div>
-									<p>
-										Analysis of students physics tests for tenth and eleventh grade.
-									</p>
 								</div>
 							</article>
 						</div>
