--- a/projects/rp.html
+++ b/projects/rp.html
@@ -23,7 +23,7 @@
 			<div class="nav-left">
 				<a href="https://www.linkedin.com/in/alejandro-pinto-07a90417a/	" class="nav-item">
 					<span class="icon">
-						<i class="fa fa-medium"></i>
+						<i class="fa fa-linkedin"></i>
 					</span>
 				</a>
 				<a href="https://github.com/AlejandroPinto5" class="nav-item">
@@ -31,7 +31,7 @@
 						<i class="fa fa-github"></i>
 					</span>
 				</a>
-				<a href="https://twitter.com/hassanhelfi" class="nav-item">
+				<a href="https://twitter.com/Alejo_Pintirris" class="nav-item">
 					<span class="icon">
 						<i class="fa fa-twitter"></i>
 					</span>
