Added table of content, still midding improve style. Corrected paddings, still mising h1 h2 h... paddings

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 			</div>
 
 			<div class="nav-right nav-menu">
-				<a class="nav-item" href="#about">About</a>
-				<a class="nav-item" href="#projects">Projects</a>
+				<a class="nav-item" href="#about"><b>About</b></a>
+				<a class="nav-item" href="#projects"><b>Projects</b></a>
 				<!-- <a class="nav-item" href="#social">Social</a> -->
 			</div>
 
@@ -59,7 +59,14 @@
 				<!-- Source: https://flic.kr/p/pAZBNK -->
 				<img class="avatar" src="https://i.ibb.co/nwjS0FL/image33.png">
 			</div>
-
+				<div class="cv">
+				<p>I'm Alejandro Pinto and this is my portfolio. Physicist with more than a year of research experience performing
+computational calculations, data analysis using python language, and
+delivery of scientific reports.</p>
+<p> I have more than a year of experience in the area of teaching university
+students and secondary education in the teaching of physics, maths and
+programming.</p>
+</div>
 		</section>
 
 		<!-- Projects -->
@@ -118,7 +125,7 @@
 		</section> -->
 
 		<!-- Footer -->
-		<section class="has-text-centered footer">
+		<section class="footer">
 			<img src="https://i.ibb.co/jR7YH3p/sign.png" alt="Image">
 		</section>
 
