--- a/projects/rp.html
+++ b/projects/rp.html
@@ -14,6 +14,7 @@
   <script type="text/javascript" id="MathJax-script" async
     src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
   </script>
+
 </head>
 	<body>
 		<!-- Navbar -->
@@ -39,8 +40,8 @@
 			</div>
 
 			<div class="nav-right nav-menu">
-				<a class="nav-item" href="../index.html">About</a>
-				<a class="nav-item" href="../index.html">Projects</a>
+				<a class="nav-item" href="../index.html"><b>About</b></a>
+				<a class="nav-item" href="../index.html"><b>Projects</b></a>
 				<!-- <a class="nav-item" href="#social">Social</a> -->
 			</div>
 
@@ -55,52 +56,61 @@
 			<div class="index">
 				<!-- Source: https://flic.kr/p/pAZBNK -->
 				<img class="avatar-index container nav-item" href="../index.html" src="https://i.ibb.co/nwjS0FL/image33.png">
-      </div>
+				<!-- Navegation list -->
+				<nav class="nav-list nav-menu">
+					<ul>
+							<li><a href="#abstract">Abstract</a></li>
+							<li><a href="#part1">Looking for the Most Stable RP Oxinitrides</a></li>
+							<ul>
+								<li><a href="#part1-1">Anionic sustitution</a></li>
+							</ul>
+					</ul>
+				</nav>
+			</div>
       <div class="rp box">
-        <h1>THEORETICAL INVESTIGATION OF THE RUDLESDEN-POPPER OXINITRIDES
+        <h1 id="title-rp"><b>THEORETICAL INVESTIGATION OF THE RUDLESDEN-POPPER OXINITRIDES
           STRUCTURES <span class="math inline"><em>S</em><em>r</em><sub>2</sub>(<em>T</em><em>a</em>,<em>N</em><em>b</em>)<em>O</em><sub>4 − <em>x</em></sub><em>N</em><sub><em>x</em></sub></span>
-          VIA DENSITY FUNCTIONAL THEORY
+          VIA DENSITY FUNCTIONAL THEORY </b>
         </h1>
 				<ol>
-        	<li><h2>ABATRACT:</h2></li>
-        <p>The Ruddlesden-Popper phase (<span class="smallcaps">rp</span>) phase
-          is a perovskite arranged in dislocated layers, with an intergrowth of
-          <span class="math inline"><em>A</em><em>B</em><em>X</em><sub>3</sub></span>
-          perovskite layers and an <span class="math inline"><em>A</em><em>X</em></span> layer:<span
-          class="math inline">(<em>A</em><em>X</em>)(<em>A</em><em>B</em><em>X</em><sub>3</sub>)</span>.
-          Partial replacement of oxygen by nitrogen (due to similarities in
-          electronegativity, polarizability, ionic radio) leads to modifications
-          of electrical, optical, catalytic and magnetic properties. Additionally,
-          a possible substitution-induced ferroelectric behaviour is
-          anticipated.</p>
-          <p>This work presents the analysis of the structural, electronic and
-            phononic properties of the compound <span class="math inline"><em>S</em><em>r</em><sub>2</sub>(<em>T</em><em>a</em>,<em>N</em><em>b</em>)<em>O</em><sub>4 − <em>x</em></sub><em>N</em><sub><em>x</em></sub></span>
-            for two anion concentrations <span class="math inline"><em>x</em> = 0.5</span> y <span
-            class="math inline"><em>x</em> = 1.0</span>. This was achieved by means
-            of <span class="smallcaps">dft</span> implemented in the Vienna
-            ab-initio simulation package (<span class="smallcaps">vasp</span>)
-            compiled in the "Guane" cluster of the supercomputer of the
-            Industrial University of Santander. The substitution was carried out
-            through the <span class="smallcaps">sod</span> code obtaining 11
-            configurations for <span class="math inline"><em>x</em> = 1.0</span>,
-            and two configurations for <span
-            class="math inline"><em>x</em> = 0.5</span>, all with different anionic
-            orders. Subsequently, structural relaxation was carried out, finding two
-            configurations of minimum energy with <em>trans</em> and <em>cis</em>
-            anionic ordering, belonging to the space group <span
-            class="math inline"><em>I</em><em>m</em><em>m</em><em>m</em></span>
-            (S.G. 71) and <span class="math inline"><em>C</em><em>m</em><em>c</em><em>m</em></span>
-            (S.G. 63), respectively. <span class="smallcaps">dft</span> Calculations
-            indicate that the <em>cis</em> anion order is energetically more
-            favourable than the <em>trans</em> order. The electronic structure
-            suggests an insulating material with a reduction in bandgap at point
-            <span class="math inline"><em>Γ</em></span> allowing photocatalysis in
-            the visible range for water splitting. The phononic structure shows
-            imaginary modes that lead to atomic displacements and a drop in
-            symmetry, achieving a phase transition to the most favourable chiral
-            soft mode with space group <span class="math inline"><em>C</em>222<sub>1</sub></span> (SG. 20).</p>
+        	<li><h2 id="abstract">ABATRACT:</h2></li>
+        		<p>The Ruddlesden-Popper phase (<span class="smallcaps">rp</span>) phase is a perovskite arranged in dislocated layers, with an intergrowth of
+          			<span class="math inline"><em>A</em><em>B</em><em>X</em><sub>3</sub></span>
+          			perovskite layers and an <span class="math inline"><em>A</em><em>X</em></span> layer:<span
+          			class="math inline">(<em>A</em><em>X</em>)(<em>A</em><em>B</em><em>X</em><sub>3</sub>)</span>.
+          			Partial replacement of oxygen by nitrogen (due to similarities in
+          			electronegativity, polarizability, ionic radio) leads to modifications
+          			of electrical, optical, catalytic and magnetic properties. Additionally,
+          			a possible substitution-induced ferroelectric behaviour is
+          			anticipated.</p>
+        		<p>This work presents the analysis of the structural, electronic and
+            		phononic properties of the compound <span class="math inline"><em>S</em><em>r</em><sub>2</sub>(<em>T</em><em>a</em>,<em>N</em><em>b</em>)<em>O</em><sub>4 − <em>x</em></sub><em>N</em><sub><em>x</em></sub></span>
+            		for two anion concentrations <span class="math inline"><em>x</em> = 0.5</span> y <span
+            		class="math inline"><em>x</em> = 1.0</span>. This was achieved by means
+            		of <span class="smallcaps">dft</span> implemented in the Vienna
+            		ab-initio simulation package (<span class="smallcaps">vasp</span>)
+            		compiled in the "Guane" cluster of the supercomputer of the
+            		Industrial University of Santander. The substitution was carried out
+            		through the <span class="smallcaps">sod</span> code obtaining 11
+            		configurations for <span class="math inline"><em>x</em> = 1.0</span>,
+            		and two configurations for <span
+            		class="math inline"><em>x</em> = 0.5</span>, all with different anionic
+            		orders. Subsequently, structural relaxation was carried out, finding two
+            		configurations of minimum energy with <em>trans</em> and <em>cis</em>
+            		anionic ordering, belonging to the space group <span
+            		class="math inline"><em>I</em><em>m</em><em>m</em><em>m</em></span>
+            		(S.G. 71) and <span class="math inline"><em>C</em><em>m</em><em>c</em><em>m</em></span>
+            		(S.G. 63), respectively. <span class="smallcaps">dft</span> Calculations
+            		indicate that the <em>cis</em> anion order is energetically more
+            		favourable than the <em>trans</em> order. The electronic structure
+            		suggests an insulating material with a reduction in bandgap at point
+            		<span class="math inline"><em>Γ</em></span> allowing photocatalysis in
+            		the visible range for water splitting. The phononic structure shows
+            		imaginary modes that lead to atomic displacements and a drop in
+            		symmetry, achieving a phase transition to the most favourable chiral
+            		soft mode with space group <span class="math inline"><em>C</em>222<sub>1</sub></span> (SG. 20).</p>
 
-            	<li><h2>SEARCH FOR THE MOST STABLE RP OXYNITRIDES:</h2></li>
+          <li><h2 id="part1">SEARCH FOR THE MOST STABLE RP OXYNITRIDES:</h2></li>
             <p>This chapter presents a structural analysis of the oxynitrides <span class="smallcaps">rp</span> <span
               class="math inline"><em>S</em><em>r</em><sub>2</sub>(<em>T</em><em>a</em>,<em>N</em><em>b</em>)<em>O</em><sub>4 − <em>x</em></sub><em>N</em><sub><em>x</em></sub></span>
               and the search for the most stable anionic orderings. It begins with a
@@ -124,16 +134,16 @@
   							<img src="https://i.ibb.co/HVR5ctw/path537.png" alt="#Fig. config">
   							<figcaption>Equivalent configurations and inequivalent configurations comparison.</figcaption>
 							</figure>
-							<p>The criterion of equivalence between two configurations is based on the concept of isometric transformations, which are geometric operations such as translations, rotations, and reflections, that maintain all distances and angles within the transformed object constant. In Figure <a href="#Fig. config" data-reference-type="ref" data-reference="Fig. config">configurations</a>, it can be seen that equivalent configurations are the same configuration because a transformation can be used to verify that a configuration is equal to the untransformed configuration. On the other hand, inequivalent configurations do not have a transformation to obtain an equivalent configuration. The fact that two configurations have the same space group does not imply that they will have the same energy <a href="#fn1" class="footnote-ref" id="fnref1" role="doc-noteref"><sup>1</sup></a>, since the elements occupying the crystallographic sites may change, meaning that the energy of the structure depends on the site occupancy and interactions. Concluding the chapter, an analysis of the structural energy of each configuration is presented. Additionally, with the help of the program <a href="https://uspex-team.org/online_utilities/poscar2cif/"><span class="smallcaps">poscar2cif</span></a>, the crystallographic space group of each configuration was obtained.</p>
+						<p>The criterion of equivalence between two configurations is based on the concept of isometric transformations, which are geometric operations such as translations, rotations, and reflections, that maintain all distances and angles within the transformed object constant. In Figure <a href="#Fig. config" data-reference-type="ref" data-reference="Fig. config">configurations</a>, it can be seen that equivalent configurations are the same configuration because a transformation can be 	used to verify that a configuration is equal to the untransformed configuration. On the other hand, inequivalent configurations do not have a transformation to obtain an equivalent configuration. The fact that two configurations have the same space group does not imply that they will have the same energy <a href="#fn1" class="footnote-ref" id="fnref1" role="doc-noteref"><sup>1</sup></a>, since the elements occupying the crystallographic sites may change, meaning that the energy of the structure depends on the site occupancy and interactions. Concluding the chapter, an analysis of the structural energy of each configuration is presented. Additionally, with the help of the program <a href="https://uspex-team.org/online_utilities/poscar2cif/"><span class="smallcaps">poscar2cif</span></a>, the crystallographic space group of each configuration was obtained.</p>
 							<section id="footnotes" class="footnotes footnotes-end-of-document" role="doc-endnotes">
 								<hr />
 								<ol>
 									<li id="fn1"><p><span class="citation" data-cites="Grau-Crespo2007"></span>.<a href="#fnref1" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
 								</ol>
 							</section>
-							<ul>
-									<li><h3>Anionic sustitution</h3></li>
-							</ul>
+						<ul>
+							<li><h3 id="part1-1">Anionic sustitution:</h3></li>
+						</ul>
 							<p>The focus of this work is the Ruddlesden-Popper (<span
 								class="smallcaps">rp</span>) phase, which has a general formula of <span
 								class="math inline"><em>A</em><sub><em>n</em> + 1</sub><em>B</em><sub><em>n</em></sub><em>X</em><sub>3<em>n</em> + 1</sub>(<em>n</em>=1)</span>,
@@ -187,7 +197,7 @@
 		</main-rp>
 
 
-		<section class="has-text-centered footer">
+		<section class="footer">
 			<img src="https://i.ibb.co/jR7YH3p/sign.png" alt="Image">
 		</section>
 
